# smart_assistant

./: .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  README.zh-CN.md  deployment.yaml  pyproject.toml
doc/: dify-ui-bridge-design.md  dify-ui-bridge-flow.plantuml  dify-ui-bridge-sequence.plantuml
examples/: chatCompletion.ps1  createSession.ps1  createSession.sh
src/: main.py  startup.py
src/dify_client/: __init__.py  async_client.py  base_client.py  client.py  exceptions.py  models.py
src/webapp/: assistant_app.py  config.py  socketio_app.py
src/webapp/mcp/: mcp_app.py
src/webapp/routes/: chat.py
src/webapp/schemas/: chat.py
src/webapp/services/: dify_chat.py  langchain_chat.py  prompt.md  session_store.py
src/webapp/static/css/: index.css
src/webapp/static/js/: index.js
src/webapp/templates/: index.html
tests/: test_chat_completion.py  test_chat_create.py  test_index_page.py  test_session_store.py  test_socketio.py  test_startup.py
